[REFACTOR] 교수진 및 관리자 작품 파일 URL 수정