@@ -1,6 +1,7 @@
 package com.hanyang.arttherapy.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -24,10 +25,13 @@ public class ProfessorsService {
 
   private final ProfessorsRepository professorsRepository;
   private final FilesRepository filesRepository;
+  private final FileStorageService fileStorageService; // <-- FileStorageService 주입!
 
   // 교수진 전체조회 (누구나 가능)
   public List<ProfessorsResponseDto> getAllProfessors() {
-    return professorsRepository.findAll().stream().map(ProfessorsResponseDto::from).toList();
+    return professorsRepository.findAll().stream()
+        .map(this::toResponseDto) // <-- 메서드 참조 대신 헬퍼 메서드 사용
+        .collect(Collectors.toList());
   }
 
   // 교수진 상세조회 (누구나 가능)
@@ -37,7 +41,7 @@ public class ProfessorsService {
             .findById(professorNo)
             .orElseThrow(() -> new CustomException(ProfessorExceptionType.PROFESSOR_NOT_FOUND));
 
-    return ProfessorsResponseDto.from(professor);
+    return toResponseDto(professor); // <-- 헬퍼 메서드 사용
   }
 
   // 교수진 등록 (관리자만)
@@ -51,6 +55,9 @@ public class ProfessorsService {
           filesRepository
               .findById(requestDto.getFilesNo())
               .orElseThrow(() -> new CustomException(ProfessorExceptionType.FILE_NOT_FOUND));
+      // 파일 활성화 처리
+      file.activateFile();
+      filesRepository.save(file);
     }
 
     Professors professor =
@@ -78,12 +85,26 @@ public class ProfessorsService {
             .findById(professorNo)
             .orElseThrow(() -> new CustomException(ProfessorExceptionType.PROFESSOR_NOT_FOUND));
 
-    Files file = null;
+    Files newFile = null;
     if (requestDto.getFilesNo() != null) {
-      file =
+      newFile =
           filesRepository
               .findById(requestDto.getFilesNo())
               .orElseThrow(() -> new CustomException(ProfessorExceptionType.FILE_NOT_FOUND));
+
+      // 기존 파일이 있고, 새 파일과 다르면 기존 파일 비활성화
+      if (professor.getFile() != null
+          && !professor.getFile().getFilesNo().equals(requestDto.getFilesNo())) {
+        fileStorageService.softDeleteFile(professor.getFile().getFilesNo());
+      }
+      // 새 파일 활성화
+      newFile.activateFile();
+      filesRepository.save(newFile);
+    } else {
+      // requestDto.getFilesNo()가 null이고 기존 파일이 있다면 비활성화
+      if (professor.getFile() != null) {
+        fileStorageService.softDeleteFile(professor.getFile().getFilesNo());
+      }
     }
 
     professor.updateProfessorIfNotNull(
@@ -92,8 +113,9 @@ public class ProfessorsService {
         requestDto.getMajor(),
         requestDto.getEmail(),
         requestDto.getTel(),
-        file);
+        newFile); // 새 파일 또는 null 전달
 
+    professorsRepository.save(professor); // 변경사항 저장
     return "교수 정보가 수정되었습니다";
   }
 
@@ -107,6 +129,11 @@ public class ProfessorsService {
             .findById(professorNo)
             .orElseThrow(() -> new CustomException(ProfessorExceptionType.PROFESSOR_NOT_FOUND));
 
+    // 연결된 파일이 있다면 소프트 삭제
+    if (professor.getFile() != null) {
+      fileStorageService.softDeleteFile(professor.getFile().getFilesNo());
+    }
+
     professorsRepository.delete(professor);
     return "교수 정보가 삭제되었습니다";
   }
@@ -116,5 +143,23 @@ public class ProfessorsService {
     if (userDetail.getUser().getRole() != Role.ADMIN) {
       throw new CustomException(ProfessorExceptionType.UNAUTHORIZED);
     }
+  }
+
+  // ProfessorsResponseDto 변환 헬퍼 메서드
+  private ProfessorsResponseDto toResponseDto(Professors professor) {
+    String fileUrl = null;
+    if (professor.getFile() != null) {
+      fileUrl = fileStorageService.getFileUrl(professor.getFile().getFilesNo());
+    }
+
+    return ProfessorsResponseDto.builder()
+        .professorNo(professor.getProfessorNo())
+        .professorName(professor.getProfessorName())
+        .position(professor.getPosition())
+        .major(professor.getMajor())
+        .email(professor.getEmail())
+        .tel(professor.getTel())
+        .fileUrl(fileUrl)
+        .build();
   }
 }
